Fix Grid Gap Issue on Experience Section

--- a/src/app/components/experience/Experience.module.scss
+++ b/src/app/components/experience/Experience.module.scss
@@ -1,7 +1,7 @@
 .listWrapper {
   position: relative;
   margin-top: var(--spacing-6xl);
-  gap: 0px 24px;
+  gap: 0px !important;
 }
 
 .galleryWrapper {
